# Studlyn

./: .gitignore  Cargo.toml  Dioxus.toml  README.md
assets/: main.css  misc.css
src/: lib.rs  main.rs  misc.rs
src/components/: timer.rs
src/sql/: builder.rs
