[package]
name = "studlyn"
version = "0.1.0"
authors = ["GuilhermeKnipl <guirissatti@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.6.0", features = [] }
directories = "6.0.0"
dotenv = "0.15.0"
rusqlite = { version = "0.37", features = ["bundled"] }
tokio = { version = "1.48.0", features = ["full"] }
uuid = { version = "1.18.1", features = ["v4", "v7"] }

[features]
default = ["desktop"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
